<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="193dp"
            android:layout_height="52dp"
            android:text="@string/adding_a_book"
            style="@style/TextStyle" android:layout_alignParentTop="true"
            android:layout_marginTop="69dp" android:layout_alignParentStart="true" android:layout_marginStart="26dp"/>


    <TextView
            android:layout_width="193dp"
            android:layout_height="52dp"
            android:text="@string/book_title"
            style="@style/TextStyle" android:layout_alignParentTop="true"
            android:layout_marginTop="10dp" android:layout_alignParentEnd="true" android:layout_marginEnd="102dp"
            android:layout_centerHorizontal="true"/>

    <EditText
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:id="@+id/bookTitle" android:layout_alignParentEnd="true" android:layout_alignParentTop="true"
            android:layout_marginEnd="41dp" android:layout_marginTop="72dp"/>
    <TextView
            android:layout_width="193dp"
            android:layout_height="52dp"
            android:text="@string/pages"
            style="@style/TextStyle" android:layout_alignParentTop="true"
            android:layout_marginTop="127dp" android:layout_alignParentStart="true" android:layout_marginStart="26dp"/>

    <EditText
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/bookPages" android:layout_alignParentEnd="true" android:layout_alignParentTop="true"
            android:layout_marginEnd="41dp" android:layout_marginTop="129dp"/>
    <TextView
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:text="@string/type"
            style="@style/TextStyle" android:layout_alignParentTop="true"
            android:layout_marginTop="182dp" android:layout_alignParentStart="true" android:layout_marginStart="25dp"/>

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


    </RadioGroup>
    <RadioButton android:id="@+id/programmingRadio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/programming"
                 android:onClick="onRadioButtonClicked" android:layout_alignParentStart="true"
                 android:layout_marginStart="0dp" android:layout_alignParentBottom="true"
                 android:layout_marginBottom="456dp"/>
    <RadioButton android:id="@+id/scienceRadio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/science"
                 android:onClick="onRadioButtonClicked" android:layout_alignParentEnd="true"
                 android:layout_marginEnd="197dp" android:layout_alignParentBottom="true"
                 android:layout_marginBottom="456dp"/>


    <RadioButton android:id="@+id/medicineRadio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/med"
                 android:onClick="onRadioButtonClicked" android:layout_alignParentEnd="true"
                 android:layout_marginEnd="5dp" android:layout_alignParentBottom="true"
                 android:layout_marginBottom="456dp"/>
    <RadioButton android:id="@+id/culturalRadio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/cultural_studies"
                 android:onClick="onRadioButtonClicked" android:layout_alignParentEnd="true"
                 android:layout_marginEnd="66dp" android:layout_alignParentBottom="true"
                 android:layout_marginBottom="456dp"/>
    <TextView
            android:layout_width="193dp"
            android:layout_height="52dp"
            android:text="@string/available"
            style="@style/TextStyle" android:layout_alignParentTop="true"
            android:layout_marginTop="333dp" android:layout_alignParentStart="true" android:layout_marginStart="25dp"
            android:layout_centerVertical="true"/>
    <CheckBox
            android:id="@+id/checkBoxEng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english" android:layout_alignParentStart="true"
            android:layout_marginStart="153dp" android:layout_centerInParent="true"/>
    <CheckBox
            android:id="@+id/checkBoxArab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arabic" android:layout_centerVertical="true" android:layout_alignParentEnd="true"
            android:layout_marginEnd="62dp"/>

    <Button android:layout_width="195dp"
            android:layout_height="58dp"
            android:id="@+id/saved"
            android:text="@string/save"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="425dp"/>

</RelativeLayout>