<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        tools:context=".MainActivity">

    <TextView
            android:layout_width="193dp"
            android:layout_height="52dp"
            android:text="@string/choose_book_type"
            style="@style/TextStyle" android:layout_centerHorizontal="true" android:layout_alignParentTop="true"
            android:layout_marginTop="76dp"/>
    <Spinner android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/spnTypes" android:minHeight="32dp" android:layout_centerHorizontal="true"
             android:layout_alignParentTop="true" android:layout_marginTop="134dp"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnShow"
            android:text="@string/show" android:layout_centerHorizontal="true" android:layout_alignParentTop="true"
            android:layout_marginTop="176dp"/>


    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/textResult"
              style="@style/TextStyle"
              android:layout_alignParentStart="true"
              android:layout_alignParentTop="true"
              android:layout_marginTop="238dp"
              android:layout_marginStart="95dp"/>

    <Button android:layout_width="195dp"
            android:layout_height="58dp"
            android:id="@+id/addMore"
            android:text="@string/add_a_new_book"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="358dp"/>


</RelativeLayout>